feat: date/time and coordinate files